--- a/demo-springcloud-m2-configserver-git/src/main/resources/application.yml
+++ b/demo-springcloud-m2-configserver-git/src/main/resources/application.yml
@@ -2,6 +2,10 @@
 server:
   port: 8888
 spring:
+  security:
+    user:
+      name: training
+      password: training
   cloud:
     config:
       server:
