--- a/demo-springcloud-m2-configserver-client/src/main/resources/bootstrap.properties
+++ b/demo-springcloud-m2-configserver-client/src/main/resources/bootstrap.properties
@@ -2,3 +2,5 @@ spring.profiles.active=qa
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.username=training
 spring.cloud.config.password=training
+encrypt.key=ABCDEFGHIJKLMNOPQRSTUVWXYZ
+management.endpoints.web.exposure.include=refresh
