--- a/demo-springcloud-m3-taskintake/pom.xml
+++ b/demo-springcloud-m3-taskintake/pom.xml
@@ -5,19 +5,23 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.2</version>
+		<version>2.5.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>demo.springcloud</groupId>
-	<artifactId>demo-springcloud-m3-tasksink</artifactId>
+	<artifactId>demo-springcloud-m3-taskintake</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo-springcloud-m3-tasksink</name>
-	<description>Demo project for Spring Cloud TaskSink</description>
+	<name>demo-springcloud-m3-taskintake</name>
+	<description>Demo project for Spring Cloud Intake</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-task</artifactId>
@@ -26,18 +30,15 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream</artifactId>
 		</dependency>
-
-		<!--used for testing https://github.com/spring-cloud/spring-cloud-deployer-->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-deployer-local</artifactId>
-			<version>1.0.3.RELEASE</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-function-core</artifactId>
+			<version>3.1.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
