--- a/coordinating services/fast-pass-customer/src/main/resources/application.properties
+++ b/coordinating services/fast-pass-customer/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=0
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-eureka.instance.instance-id=${spring.application.name}:${random.int}
+#eureka.instance.instance-id=fastpass-service:${random.int}
+eureka.instance.instance-id=fastpass-service
 
 eureka.instance.hostname=localhost
