--- a/coordinating services/tollrates-service/src/main/resources/application.properties
+++ b/coordinating services/tollrates-service/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-server.port=0
+server.port=8085
 
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-eureka.instance.instance-id=${spring.application.name}:${random.int}
+#eureka.instance.instance-id=toll-service:${random.int}
+eureka.instance.instance-id=toll-service
+
 
 eureka.instance.hostname=localhost
