--- a/coordinating services/tollrates-service/src/main/resources/application.properties
+++ b/coordinating services/tollrates-service/src/main/resources/application.properties
@@ -7,5 +7,6 @@ eureka.client.fetch-registry=true
 #eureka.instance.instance-id=toll-service:${random.int}
 eureka.instance.instance-id=toll-service
 
-
 eureka.instance.hostname=localhost
+
+eureka.client.healthcheck.enabled=true
