--- a/coordinating services/fast-pass-customer/src/main/resources/application.properties
+++ b/coordinating services/fast-pass-customer/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=0
+spring.application.name=fastpass-service
 
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
-#eureka.instance.instance-id=fastpass-service:${random.int}
-eureka.instance.instance-id=fastpass-service
-
-eureka.instance.hostname=localhost
+##eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#
+##eureka.instance.instance-id=fastpass-service:${random.int}
+#eureka.instance.instance-id=fastpass-service
+#
+#eureka.instance.hostname=localhost
